Sun Jul 12 13:21:41 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_sf_legendre.h, gsl_sf_poly.h, gsl_sf_pow_int.h: added
 	HAVE_INLINE around some inline definitions in the header files

	* gamma.c: implemented the natural versions of gsl_sf_lnchoose and
	gsl_sf_choose.

Wed Apr 15 21:27:48 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added the return code as the second argument of GSL_WARNING, so
 	we can filter on the error number or output a standard message for
 	each one.

1998-02-02  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (include_HEADERS): added gsl_specfunc.h so it gets
	into the distribution.
	(INCLUDES): added -I$(top_srcdir) so that bessel.c can find
	gsl_math.h