@@ -1,3 +1,8 @@
+Mon Jul 13 12:40:27 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* gamma.c: changed all the factorial functions to take unsigned
+ 	int arguments, since negative values are not allowed.
+
 Sun Jul 12 13:21:41 1998  Brian Gough  <bjg@vvv.lanl.gov>
 
 	* gsl_sf_legendre.h, gsl_sf_poly.h, gsl_sf_pow_int.h: added
